--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Bank Website</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Amr Bank</h1>
+    <!-- header  section started -->
+    <header>
+        <h1 class="text-5xl text-center mt-6 mb-12"> Welcome to Your <span class="font-semibold text-violet-600">Bank!</span></h1>
+    </header>
+
+    <!-- main section started -->
+    <main>
+        <section class="bg-blue-100 w-9/12 mx-auto mt-12s p-8">
+            <h3 class="text-3xl mb-4 font-medium">Please Login</h3>
+            <div>
+                <input class="w-9/12 block mb-2 px-3" type="email" name="" id="" placeholder="Enter your e-mail">
+                <input class="w-9/12 block mb-2 px-3"  type="password" name="" id="" placeholder="Enter your password">
+                <button class="bg-amber-600 hover:bg-sky-700 px-8 py-2 text-white font-medium rounded-lg ">Submit</button>
+            </div>
+        </section>
+
+    </main>
     
 </body>
 </html>
