--- a/bank.html
+++ b/bank.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="bg-pink-400 p-8 rounded-xl">
                     <h4 class="text-2xl">Withdraw Money</h4>
-                    <h2 class="text-5xl">$00</h2>
+                    <h2 class="text-5xl">$<span id="withdraw-total">00</span></h2>
                 </div>
                 <div class="bg-violet-500 p-8 rounded-xl">
                     <h4 class="text-2xl">Total Balance</h4>
@@ -53,7 +53,7 @@
                 <div class="bg-sky-400 p-8 rounded-xl">
                     <h4 class="text-2xl mb-4 text-white">Withdraw Money</h4>
 
-                    <input class="w-9/12 block mb-2 px-3" type="text" name="" id=""
+                    <input class="w-9/12 block mb-2 px-3" type="text" name="" id="withdraw-field"
                         placeholder="Enter your $ amount to withdraw">
                     <button id="btn-withdraw"
                         class="bg-amber-600 hover:bg-sky-700 px-8 py-2 text-white font-medium rounded-lg ">Withdraw</button>
@@ -64,6 +64,7 @@
     </main>
     <!-- Js file connected -->
     <script src="js/deposit.js"></script>
+    <script src="js/withdraw.js"></script>
 </body>
 
 </html>
